--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,8 @@ version: 2.1.1
 repository: https://github.com/basnetjiten/flutter_gcaptcha_v3
 
 environment:
-  sdk: ">=3.3.2 <4.0.0"
-  flutter: ">=1.17.0"
+  sdk: ^3.10.7
+  flutter: '>=3.3.0'
 
 dependencies:
   flutter:
@@ -18,7 +18,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.1
+  flutter_lints: ^6.0.0
 
   #functional programmings
   dartz: ^0.10.1
